--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title></title>
 
     <!-- SCSS -->
-    <link rel="stylesheet" href="http://unpkg.com/swiper/css/swiper.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <link rel="stylesheet" href="./app/static/main.min.css">
 
   </head>
@@ -48,7 +48,7 @@
 
     </div> <!-- ends contain mobile slider -->
 
-    <script src="http://unpkg.com/swiper/js/swiper.min.js"></script>
+    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
 
     <script>
       var swiper = new Swiper('.swiper-container', {
